# my_python_module

./: pyproject.toml
docs/: uv.md
src/my_python_module/: __init__.py  main.py
