[project]
name = "my-python-module"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "joao-parana", email = "joao.parana@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
hello_uv = "my_python_module.main:hello"
